git commit -m 'Add Advantages'

--- a/01_Introduction.ipynb
+++ b/01_Introduction.ipynb
@@ -67,6 +67,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Advantages\n",
+    "- Compactible with Scikit, Keras, Numoy, Pandas, TensorFloe etc\n",
+    "- Maximizes Development Speed\n",
+    "- Safe and Secure web app Development\n",
+    "- No HTML, CSS & JavaScript coding is required\n",
+    "- Easy to deploy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
